--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="./logo.png">
+    <link rel="icon" type="image/x-icon" href="./photo_2023-10-20_04-52-54.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <title>Eduon</title>
+    <title>InfoNex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
